--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -11,11 +11,17 @@
     </div>
   <% end %>
 
-  <div>
-    <%= f.text_area :description %>
+  <div class="field form-group">
+    <%= f.label :description, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_area :description, size: "60x12" %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit %>
+    </div>
   </div>
+
 <% end %>
